# jetbrains-internship-reason-small-models

./: README.md  ROADMAP.md  pyproject.toml  requirements.txt
mlm/: README.md  __init__.py  data.py  requirements.txt  run_compute_experiment.py  train.py
mlm/figures/: accuracy_vs_compute.json
mlm/models/: __init__.py  bert_mlm.py  trm.py
reasoning/: README.md  __init__.py  model.py  recurrent_loop.py  requirements.txt  run_depth_experiment.py  sudoku.py
reasoning/figures/: depth_vs_accuracy.json
word2vec/: GRADIENTS.md  README.md  __init__.py  corpus_utils.py  data.py  download_text8.py  eval.py  model.py  run.py  test_word2vec.py  train.py  visualize.py
word2vec/figures/: loss_history.json
