[project]
name = "jetbrains-reason-slm"
version = "0.1.0"
description = "Learning to Reason with Small Models — word2vec (Task #1) and MLM/recurrent reasoning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0,<2.0.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
viz = [
    "matplotlib>=3.5.0",
]

[tool.pytest.ini_options]
testpaths = ["word2vec"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py38"
src = ["word2vec", "mlm", "reasoning"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N803", "N806"]

[tool.ruff.format]
quote-style = "double"
